Prevent sidebar from closing when setting bold text in rich text editor and improve open close collapsed states

--- a/packages/app/src/components/main-app-sidebar.css
+++ b/packages/app/src/components/main-app-sidebar.css
@@ -99,8 +99,7 @@
 	}
 
 	.MainAppSidebar-sidebar {
-		--my-sidebar-width: 256px;
-
+		width: 256px;
 		height: auto;
 	}
 
